src/assets/main.less
@import './variables.less';

@keyframes rotation {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(359deg);
  }
}

@keyframes woosh-woosh {
  0% {
    opacity: 0.4;
  }

  40% {
    opacity: 1;
  }

  100% {
    opacity: 0.4;
  }
}

.animation-rotation {
  animation: rotation 2s infinite linear;
}

.animation-rotation--slow-in-out {
  animation: rotation 1s infinite cubic-bezier(0.09, 0.43, 0.94, 0.59);
}

.animation-skeleton {
  border-radius: 4px;
  animation: woosh-woosh 1.6s infinite linear;
}

:root {
  --primary-color: #293fe6;
  --app-nav-bg-color: #293fe6;
  --input-box-shadow: rgb(0 0 0 / 50%) -1px -1px 2px -1px, rgb(255 255 255 / 33%) 1px 1px 1px, rgb(0 0 0 / 25%) 0px 0px 0px 1px inset;
  --head-space: 60px;
  --dark-highlight-color: #4B8DE6;

  @media @tablet {
    --head-space: 40px;
    --side-padding: 20px;
  }

  @media @phone {
    --side-padding: 16px;
  }
}

html,
body {
  min-height: 100%;
  margin: 0;
  width: 100%;
  padding: 0;
  background-color: var(--app-bg-color);
  color: var(--app-color, rgba(0, 0, 0, .85));
  touch-action: pan-x pan-y;
}

body {
  font-size: 16px;
  font-family: "Radio Canada", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  &.dashboard {
    background-color: var(--app-bg-color, #595959);
    color: #fff;

    &.table {
      @media @tablet {
        background-color: var(--app-bg-color, #434343);
      }
    }
  }
}

* {
  box-sizing: border-box;
}

.inline-vertical-middle {
  vertical-align: middle;
}

.clickable {
  user-select: none;
  cursor: pointer !important;
}

.not-clickable {
  user-select: none;
  cursor: default !important;
}

.showOnIpad {
  @media @ipad_excl {
    display: none !important;
  }
}

.hideOnIpad {
  @media @ipad {
    display: none !important;
  }
}

.showOnTablet {
  @media @tablet_excl {
    display: none !important;
  }
}

.hideOnTablet {
  @media @tablet {
    display: none !important;
  }
}

main {
  max-width: 1000px;
  margin: auto;
  padding: 0 var(--side-padding, 24px) 80px;
  box-sizing: content-box;

  .head-space-helper {
    margin-top: var(--head-space);
  }
  
  .page-header {
      margin-bottom: 60px;

      h1, h2 {
        font-size: 28px;
        margin: 0;
      }

      @media @phone {
        h2 {
          font-size: 20px;
        }
      }

      p { 
          margin: 16px 0 24px;
          line-height: 1.5;
          color: rgba(0, 0, 0, 0.85);
      }

      .dashboard & p {
        color: rgba(255, 255, 255, .85);
      }
  
      .action {
          text-align: right;
      }

      @media @tablet {      

        h1:not(.fixed) {
          display: none;
        }
      }
  }
}

.hide {
  display: none !important;
}

.mask {
  position: fixed;
  inset: 0;
}

sui-button,
sui-input[type=submit] {
  position: relative;
  line-height: 1;
  font-size: 16px;
  padding: 12px 32px;
  white-space: nowrap;

  &.with-icon svg {
    position: absolute;
    left: 32px;

    & + * {
      display: inline-block;
      margin-left: 28px;
    }
  }
}

/** start sui-elements **/
sui-input:not([type=checkbox],[type=radio],[type=submit],[type=reset]) {
  border: 1px solid #8C8C8C;
  background: #fff;
  box-shadow: -1px -1px 1px rgba(0, 0, 0, 0.25), inset 1px 1px 1px rgba(0, 0, 0, 0.5);
  border-radius: 4px;
  height: 40px;

  input::placeholder {
    color: rgba(0, 0, 0, 0.4);
  }

  .dashboard &,
  .db-input {
    color: #fff;
    border: 0.5px solid #8C8C8C;

    input::placeholder {
      color: rgba(255, 255, 255, 0.4);
    }
    
    background: rgba(255, 255, 255, 0.08);
  }

  &:focus-within {
    border: 0;
    input {
      border: 1px solid var(--primary-color);
      box-shadow: 0 0 0 1px var(--primary-color) inset;
      outline: 0;

      .dashboard & {
        border: 1px solid var(--dark-highlight-color);
        box-shadow: 0 0 0 1px var(--dark-highlight-color) inset;
      }
    }
  }

  .dashboard .select-input & {
    background-color: transparent;
  }
}

sui-input[type=radio],
sui-input[type=checkbox] {
  filter: none;
  border-width: 2px;
  cursor: pointer;
  
  .dashboard & {
    color: #fff;
  }

  &:active:not([disabled]),
  &:focus:not([disabled]) {

    &[checked] {
      outline: 3px solid  rgba(41, 63, 230, 0.3);

      .dashboard & {
        outline: 3px solid rgba(0, 0, 0, 0.2);
      }
    }

    &:not([checked]) {
      outline: 3px solid  rgba(41, 63, 230, 0.1);
      background-color:  rgba(41, 63, 230, 0.1);

      .dashboard & {
        outline: 3px solid rgba(0, 0, 0, 0.2);
        background-color:  rgba(0, 0, 0, 0.2);
      }
    }
  }

  &[disabled] {
    color: rgba(0, 0, 0, 0.25);

    .dashboard & {
      color: rgba(255, 255, 255, 0.6);
    }
  }
}

sui-input[type=radio] {

  &[checked]::after {
    box-shadow: inset -1px -1px 2px rgba(0, 0, 0, 0.25);
  }
  
  &:active:not([disabled]) {
    &[checked] {
      background-color:  rgba(41, 63, 230, 0.3);
    }
  }
}

sui-input[type=checkbox] {
  &[checked] {
    border: none;
    color: #fff;
    background: var(--primary-color);
    box-shadow: inset -1px -1px 2px rgb(0 0 0 / 25%);

    .dashboard & {
      color: #434343;
      background: #fff;
    }

    &[disabled] {
      
        background: rgba(0, 0, 0, 0.25);
        color: rgba(255, 255, 255, 0.6);

      .dashboard & {
        background: rgba(255, 255, 255, 0.6);
        color: rgba(255, 255, 255, 0.6);
      }
    }
  }
}

sui-select {
  border: 0.5px solid #8C8C8C;
  background: rgba(255, 255, 255, 0.08);
  box-shadow: inset -1px -1px 2px rgba(0, 0, 0, 0.25), inset 1px 1px 2px rgba(255, 255, 255, 0.65);

  .dashboard & {
    color: #fff;
  }

  &:focus {
    // box-shadow: inset 2px 2px 0 var(--primary-color), inset -2px -2px 0 var(--primary-color);
    border-color: var(--primary-color);
    outline: 2px solid var(--primary-color);
  }
}
/* ... */

